divider too small fix

--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ body {
         font-size: 20px
     }
     #divider {
-        width: 250px
+        width: 260px
     }
     .gen-pass:hover {
         transform: scale(1);
